# IGSF8-NK

./: .gitignore  LICENSE  README.md  setup.cfg
OncoMark/: README.md
OncoMark/data/: __init__.py  _dataset.py
OncoMark/data/datasets/: B2M_mRNA_expression_z-scores_relative_to_normal samples_logRNASeqV2RSEM.txt  BRCA.txt  IGSF8_cna.txt  KIR3DL2_alterations_across_samples.tsv  OV.txt
OncoMark/data/datasets/Pelka2021/: Pelka2021_IGSF8_KIR3DL2_B2M_KLRC1_fraction.csv
OncoMark/data/datasets/TISCH2/: Expression_of_IGSF8_and_KIR3DL2_in_TISCH2.csv
OncoMark/plotting/: __init__.py  _barplot.py  _setting.py
OncoMark/tools/: __init__.py  _filter.py  _stats.py
OncoMark/utils/: _verbosity.py
OncoMarkAI/: README.md  __init__.py
OncoMarkAI/data/datasets/: IGSF8_alterations_across_samples.tsv  IGSF8_mRNA_expression_z-scores_relative_to_normal samples_logRNASeqV2RSEM.txt  OptiTypeCallsHLA_20171207.tsv  project.primary-site.tsv
OncoMarkAI/plotting/: _boxplot.py
OncoMarkAI/utils/: __init__.py
notebooks/: 01_pan-cancer_analysis_of_IGSF8.ipynb  02_scRNAseq_of_IGSF8.ipynb  03_prognostic_association_of_IGSF8_with_survival.ipynb  04_prognostic_association_of_IGSF8_with_ICB_response.ipynb  05_pan-cancer_analysis_of_KIR3DL2.ipynb  06_association_between_IGSF8_and_B2M.ipynb  06_association_between_IGSF8_and_MHCI.ipynb  07_association_between_IGSF8_and_HLA.ipynb  B2M_KO.ipynb  IGSF8_manuscript_B2M.ipynb  IGSF8_manuscript_IGSF8.ipynb  IGSF8_manuscript_KIR3DL2.ipynb  IGSF8_manuscript_KIRs.ipynb  IGSF8_manuscript_survival_analysis.ipynb  dotplot_pseudo_bulkRNAseq-KIR3DL2.ipynb  mouse_NK_cell.ipynb
(+5 files in other folders)
