[metadata]
name = OncoMarkAI
version = 0.1.2
author = Caibin Sheng
author_email = caibin_sheng@gv20tx.com
url = https://github.com/gv20-therapeutics/IGSF8-NK
description = A tool for biomarker discovery and  development and indication selection for immuno-oncology drugs
keywords = biomarker, TCGA, clinical, digital pathology, data analysis
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific :: Bioinformatics

[options]
packages = find:
python_requires = >=3.11
zip_safe = False
include_package_data = True
install_requires =
    pandas >= 1.3.4
    seaborn >= 0.11.2
    scikit-learn >= 1.0.1
    scanpy >= 1.9.1
    anndata >= 0.8.0
    lifelines >= 0.27.7
package_dir=
    =.