[metadata]
name = OncoMark
version = 0.1.2
author = Caibin Sheng
author_email = caibin_sheng@gv20tx.com
url = https://github.com/gv20-therapeutics/IGSF8-NK
description = A tool for biomarker discovery and  development and indication selection for immuno-oncology drugs
keywords = biomarker, TCGA, clinical, digital pathology, data analysis
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11.4
    Topic :: Scientific :: Bioinformatics

[options]
packages = find:
python_requires = >=3.11.4
zip_safe = False
include_package_data = True
install_requires =
    pandas >= 2.0.3
    seaborn >= 0.13.0
    scikit-learn >= 1.3.1
    scanpy >= 1.9.3
    anndata >= 0.9.1
    lifelines >= 0.28.0
package_dir=
    =.